# AgentOx

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SETUP.md  agentox-policy.yaml
.github/workflows/: rust.yml
crates/agentox-cli/: Cargo.toml
crates/agentox-cli/src/: main.rs
crates/agentox-cli/tests/: cli_behavior.rs
crates/agentox-core/: Cargo.toml
crates/agentox-core/src/: error.rs  lib.rs
crates/agentox-core/src/checks/: mod.rs  runner.rs  types.rs
crates/agentox-core/src/checks/behavioral/: error_semantics.rs  idempotency.rs  mod.rs  schema_output_alignment.rs
crates/agentox-core/src/checks/conformance/: capability_negotiation.rs  error_codes.rs  init_capabilities.rs  initialized_order.rs  jsonrpc_structure.rs  malformed_request.rs  mod.rs  protocol_version.rs  tool_input_schema.rs  tools_list_valid.rs  unknown_method.rs
crates/agentox-core/src/checks/security/: constants.rs  error_leakage.rs  mod.rs  prompt_injection_echo.rs  resource_exhaustion.rs  tool_param_boundary.rs
crates/agentox-core/src/client/: agent_session.rs  http_sse.rs  mod.rs  session.rs  stdio.rs  transport.rs
crates/agentox-core/src/platform/: adapter.rs  mod.rs  types.rs
crates/agentox-core/src/platform/adapters/: a2a.rs  mcp.rs  mod.rs  openai_tool_use.rs
crates/agentox-core/src/policy/: mod.rs
crates/agentox-core/src/protocol/: jsonrpc.rs  mcp_types.rs  mod.rs
crates/agentox-core/src/report/: json.rs  mod.rs  text.rs  types.rs
crates/agentox-core/tests/: integration_test.rs  transport_contract_test.rs
mcp-test-servers/: README.md
mcp-test-servers/rust-sdk-server/: Cargo.toml
mcp-test-servers/rust-sdk-server/src/: main.rs
tests/mock_server/: Cargo.toml  main.rs
