[package]
name = "agentox-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "CLI for AgentOx MCP security and conformance auditor"
keywords = ["mcp", "audit", "security", "conformance", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "agentox"
path = "src/main.rs"

[dependencies]
agentox-core = { path = "../agentox-core", version = "0.2.0" }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
indicatif = "0.17"
colored = { workspace = true }
