[package]
name = "agentox-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Core audit engine for AgentOx MCP security auditor"
keywords = ["mcp", "audit", "security", "conformance", "jsonrpc"]
categories = ["development-tools", "web-programming"]

[features]
default = []
http-sse = []

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
shell-words = "1"

[dev-dependencies]
tokio = { workspace = true }
